--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -4,12 +4,12 @@
   --primary-50: rgba(0, 113, 183, 0.5);
   --secondary: #212529;
   --success: #1bb74f;
-  --info: #17a2b8;
+  --info: #0d272b;
   --warning: #ff6d02;
   --danger: #ec185d;
   --light: #f8f9fa;
   --gray: #d9d9d9;
-  --dark: #212529;
+  --dark: #000000;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
